chore: update api ref to reflact oas changes
